# sales-agent-h

./: .env.example  .gitignore  GMAIL_SETUP.md  README.md  SETUP.md  app.py  auth.py  availability.py  daily_meetings.py  google_calendar.py  main.py  requirements.txt  start-all.sh  start-backend.sh  start-frontend.sh  stop-all.sh
backend/: .gitignore  env.example  get_gmail_token.py  pyproject.toml  sample_data.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  gemini_client.py
backend/app/ai/tools/: __init__.py  calendar_tool.py  email_tool.py  hubspot_tool.py
backend/app/api/: __init__.py  cards.py  chat.py
backend/app/models/: __init__.py  cards.py
backend/app/schemas/: __init__.py  cards.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CardFormModal.tsx  ChatModal.tsx  CustomerCard.tsx  KanbanBoard.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
templates/: dashboard.html  oauth_error.html  simple_dashboard.html
