[project]
name = "sales-agent-backend"
version = "0.1.0"
description = "AI-powered sales dashboard backend"
authors = [
    {name = "Sales Agent Team", email = "team@salesagent.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.2",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
